--- a/app/src/main/res/layout/item_loaisp.xml
+++ b/app/src/main/res/layout/item_loaisp.xml
@@ -29,5 +29,22 @@
         android:textColor="@color/black"
         android:textSize="16sp" />
 
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_so_luong"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="3dp"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
+
+
 
 </LinearLayout>
