ko co j thay doi nhieu

--- a/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_admin_thong_ke_doanh_thu.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="16dp"
             android:id="@+id/thong_ke_danh_sach_ban_chay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
